src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot1a@snapshot1a.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::singleton(\"Alpha\"),\nNamingScheme::Full.into())"
---
#[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
pub struct AlphaState;
