src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot2@snapshot2.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::enumeration(\"Alpha\",\n[StateNode::singleton(\"Beta\")]),\n(ParentState::new(\"GameState\", \"Alpha\", None), NamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub enum GameAlpha {
    #[default]
    Beta
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameAlpha = GameAlpha::Beta)]
pub struct GameAlphaBeta;
