src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot2a@snapshot2a_rustfmt.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::enumeration(\"Alpha\",\n[StateNode::singleton(\"Beta\")]), NamingScheme::Full.into())"
---
#[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
pub enum Alpha {
    #[default]
    Beta
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Alpha = Alpha::Beta)]
pub struct AlphaBeta;
