src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot3.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::list(\"Alpha\",\n[StateNode::singleton(\"Beta\")]),\n(ParentState::from((\"GameState\", \"Alpha\")), NamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct GameStateAlpha;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct GameStateBeta;
