src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot3@snapshot3.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::list(\"Alpha\",\n[StateNode::singleton(\"Beta\")]),\n(ParentState::new(\"GameState\", \"Alpha\", None), NamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub struct GameAlpha;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub struct GameBeta;
