src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot3@snapshot3_rustfmt.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::list(\"Alpha\",\n[StateNode::singleton(\"Beta\")]),\n(ParentState::from((\"GameState\", \"Alpha\")), NamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct GameAlpha;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct GameBeta;
