src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshots@Full_rustfmt.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&node, (source, scheme).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Menu)]
pub enum GameMenuState {
    #[default]
    Main,
      Options,
      Continue
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuState = GameMenuState::Main)]
pub struct GameMenuMainState;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuState = GameMenuState::Options)]
pub enum GameMenuOptionsState {
    #[default]
    Graphics,
      Audio,
      Gameplay
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuOptionsState = GameMenuOptionsState::Graphics)]
pub struct GameMenuOptionsGraphicsState;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuOptionsState = GameMenuOptionsState::Audio)]
pub struct GameMenuOptionsAudioState;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuOptionsState = GameMenuOptionsState::Gameplay)]
pub struct GameMenuOptionsGameplayState;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuState = GameMenuState::Continue)]
pub enum GameMenuContinueState {
    #[default]
    Save,
      Load
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuContinueState = GameMenuContinueState::Save)]
pub struct GameMenuContinueSaveState;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameMenuContinueState = GameMenuContinueState::Load)]
pub struct GameMenuContinueLoadState;
